[project]
name = "rpsls-online"
version = "0.1.0"
description = ""
authors = [
    {name = "Charles",email = "cgray888@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "rpsls_online", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
